--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -1836,6 +1836,274 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>A/D Ratio</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Legendary</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Combo Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bug</th>\n",
+       "      <td>361.352941</td>\n",
+       "      <td>0.940179</td>\n",
+       "      <td>50.352941</td>\n",
+       "      <td>55.411765</td>\n",
+       "      <td>3.470588</td>\n",
+       "      <td>53.058824</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>39.294118</td>\n",
+       "      <td>43.647059</td>\n",
+       "      <td>47.941176</td>\n",
+       "      <td>289.705882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bug-Electric</th>\n",
+       "      <td>595.500000</td>\n",
+       "      <td>1.111667</td>\n",
+       "      <td>62.000000</td>\n",
+       "      <td>55.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>77.000000</td>\n",
+       "      <td>55.000000</td>\n",
+       "      <td>86.500000</td>\n",
+       "      <td>395.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bug-Fighting</th>\n",
+       "      <td>214.000000</td>\n",
+       "      <td>1.637681</td>\n",
+       "      <td>155.000000</td>\n",
+       "      <td>95.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>550.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bug-Fire</th>\n",
+       "      <td>636.500000</td>\n",
+       "      <td>1.234266</td>\n",
+       "      <td>72.500000</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>92.500000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>455.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bug-Flying</th>\n",
+       "      <td>286.285714</td>\n",
+       "      <td>1.146274</td>\n",
+       "      <td>70.142857</td>\n",
+       "      <td>61.571429</td>\n",
+       "      <td>2.857143</td>\n",
+       "      <td>63.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>72.857143</td>\n",
+       "      <td>69.071429</td>\n",
+       "      <td>82.857143</td>\n",
+       "      <td>419.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Water-Ice</th>\n",
+       "      <td>103.000000</td>\n",
+       "      <td>0.821759</td>\n",
+       "      <td>83.333333</td>\n",
+       "      <td>113.333333</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>90.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>78.333333</td>\n",
+       "      <td>66.666667</td>\n",
+       "      <td>511.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Water-Poison</th>\n",
+       "      <td>118.666667</td>\n",
+       "      <td>1.162149</td>\n",
+       "      <td>68.333333</td>\n",
+       "      <td>58.333333</td>\n",
+       "      <td>1.333333</td>\n",
+       "      <td>61.666667</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>61.666667</td>\n",
+       "      <td>91.666667</td>\n",
+       "      <td>85.000000</td>\n",
+       "      <td>426.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Water-Psychic</th>\n",
+       "      <td>111.800000</td>\n",
+       "      <td>0.783668</td>\n",
+       "      <td>73.000000</td>\n",
+       "      <td>104.000000</td>\n",
+       "      <td>1.200000</td>\n",
+       "      <td>87.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>79.000000</td>\n",
+       "      <td>44.000000</td>\n",
+       "      <td>481.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Water-Rock</th>\n",
+       "      <td>430.000000</td>\n",
+       "      <td>0.727170</td>\n",
+       "      <td>82.750000</td>\n",
+       "      <td>112.750000</td>\n",
+       "      <td>3.750000</td>\n",
+       "      <td>70.750000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>61.500000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>36.000000</td>\n",
+       "      <td>428.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Water-Steel</th>\n",
+       "      <td>395.000000</td>\n",
+       "      <td>0.977273</td>\n",
+       "      <td>86.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>84.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>111.000000</td>\n",
+       "      <td>101.000000</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>530.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>154 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        #  A/D Ratio      Attack     Defense  Generation  \\\n",
+       "Combo Type                                                                 \n",
+       "Bug            361.352941   0.940179   50.352941   55.411765    3.470588   \n",
+       "Bug-Electric   595.500000   1.111667   62.000000   55.000000    5.000000   \n",
+       "Bug-Fighting   214.000000   1.637681  155.000000   95.000000    2.000000   \n",
+       "Bug-Fire       636.500000   1.234266   72.500000   60.000000    5.000000   \n",
+       "Bug-Flying     286.285714   1.146274   70.142857   61.571429    2.857143   \n",
+       "...                   ...        ...         ...         ...         ...   \n",
+       "Water-Ice      103.000000   0.821759   83.333333  113.333333    1.000000   \n",
+       "Water-Poison   118.666667   1.162149   68.333333   58.333333    1.333333   \n",
+       "Water-Psychic  111.800000   0.783668   73.000000  104.000000    1.200000   \n",
+       "Water-Rock     430.000000   0.727170   82.750000  112.750000    3.750000   \n",
+       "Water-Steel    395.000000   0.977273   86.000000   88.000000    4.000000   \n",
+       "\n",
+       "                      HP  Legendary     Sp. Atk     Sp. Def      Speed  \\\n",
+       "Combo Type                                                               \n",
+       "Bug            53.058824        0.0   39.294118   43.647059  47.941176   \n",
+       "Bug-Electric   60.000000        0.0   77.000000   55.000000  86.500000   \n",
+       "Bug-Fighting   80.000000        0.0   40.000000  100.000000  80.000000   \n",
+       "Bug-Fire       70.000000        0.0   92.500000   80.000000  80.000000   \n",
+       "Bug-Flying     63.000000        0.0   72.857143   69.071429  82.857143   \n",
+       "...                  ...        ...         ...         ...        ...   \n",
+       "Water-Ice      90.000000        0.0   80.000000   78.333333  66.666667   \n",
+       "Water-Poison   61.666667        0.0   61.666667   91.666667  85.000000   \n",
+       "Water-Psychic  87.000000        0.0   94.000000   79.000000  44.000000   \n",
+       "Water-Rock     70.750000        0.0   61.500000   65.000000  36.000000   \n",
+       "Water-Steel    84.000000        0.0  111.000000  101.000000  60.000000   \n",
+       "\n",
+       "                    Total  \n",
+       "Combo Type                 \n",
+       "Bug            289.705882  \n",
+       "Bug-Electric   395.500000  \n",
+       "Bug-Fighting   550.000000  \n",
+       "Bug-Fire       455.000000  \n",
+       "Bug-Flying     419.500000  \n",
+       "...                   ...  \n",
+       "Water-Ice      511.666667  \n",
+       "Water-Poison   426.666667  \n",
+       "Water-Psychic  481.000000  \n",
+       "Water-Rock     428.750000  \n",
+       "Water-Steel    530.000000  \n",
+       "\n",
+       "[154 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon.pivot_table(index=['Combo Type'])#, columns=['Total', 'HP', 'Attack', 'Defense', 'Sp. Atk', 'Sp. Def', 'Speed', 'Generation', 'Legendary', 'A/D Ratio'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
