--- a/your-code/challenge-3.ipynb
+++ b/your-code/challenge-3.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "4       3.39       17850  United Kingdom         20.34  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,9 @@
     }
    ],
    "source": [
-    "orders.info()"
+    "orders.info()\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -280,7 +282,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n"
    ]
   },
   {
@@ -360,7 +363,8 @@
     "#amount_spend_unique = orders.groupby('CustomerID')['amount_spent'].sum()\n",
     "\n",
     "customers_orders = orders.groupby('CustomerID').agg({'amount_spent': 'sum'})\n",
-    "customers_orders.head()"
+    "customers_orders.head()\n",
+    "\n"
    ]
   },
   {
@@ -370,12 +374,13 @@
    "outputs": [],
    "source": [
     "percentil_95 = np.percentile(customers_orders['amount_spent'],95)\n",
-    "percentil_75 = np.percentile(customers_orders['amount_spent'],75)"
+    "percentil_75 = np.percentile(customers_orders['amount_spent'],75)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -399,62 +404,56 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>CustomerID</th>\n",
        "      <th>amount_spent</th>\n",
        "      <th>tipo_cliente</th>\n",
-       "      <th>Country</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>12346</td>\n",
+       "      <th>12346</th>\n",
        "      <td>77183.60</td>\n",
        "      <td>vip</td>\n",
-       "      <td>United Kingdom</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>12347</td>\n",
+       "      <th>12347</th>\n",
        "      <td>4310.00</td>\n",
        "      <td>preferred</td>\n",
-       "      <td>United Kingdom</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>12348</td>\n",
+       "      <th>12348</th>\n",
        "      <td>1797.24</td>\n",
        "      <td>preferred</td>\n",
-       "      <td>United Kingdom</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>12349</td>\n",
+       "      <th>12349</th>\n",
        "      <td>1757.55</td>\n",
        "      <td>preferred</td>\n",
-       "      <td>United Kingdom</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>12350</td>\n",
+       "      <th>12350</th>\n",
        "      <td>334.40</td>\n",
        "      <td>normal</td>\n",
-       "      <td>United Kingdom</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   CustomerID  amount_spent tipo_cliente         Country\n",
-       "0       12346      77183.60          vip  United Kingdom\n",
-       "1       12347       4310.00    preferred  United Kingdom\n",
-       "2       12348       1797.24    preferred  United Kingdom\n",
-       "3       12349       1757.55    preferred  United Kingdom\n",
-       "4       12350        334.40       normal  United Kingdom"
+       "            amount_spent tipo_cliente\n",
+       "CustomerID                           \n",
+       "12346           77183.60          vip\n",
+       "12347            4310.00    preferred\n",
+       "12348            1797.24    preferred\n",
+       "12349            1757.55    preferred\n",
+       "12350             334.40       normal"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,12 +479,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -509,125 +508,102 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>CustomerID</th>\n",
-       "      <th>amount_spent</th>\n",
-       "      <th>tipo_cliente</th>\n",
+       "      <th>vip</th>\n",
+       "      <th>preferred</th>\n",
+       "      <th>normal</th>\n",
+       "      <th>vip + pref</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>Country</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>12346</td>\n",
-       "      <td>77183.60</td>\n",
-       "      <td>vip</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>Australia</th>\n",
        "      <td>1</td>\n",
-       "      <td>12347</td>\n",
-       "      <td>4310.00</td>\n",
-       "      <td>preferred</td>\n",
-       "      <td>United Kingdom</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>EIRE</th>\n",
        "      <td>2</td>\n",
-       "      <td>12348</td>\n",
-       "      <td>1797.24</td>\n",
-       "      <td>preferred</td>\n",
-       "      <td>United Kingdom</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>10.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>12349</td>\n",
-       "      <td>1757.55</td>\n",
-       "      <td>preferred</td>\n",
-       "      <td>United Kingdom</td>\n",
+       "      <th>France</th>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>12350</td>\n",
-       "      <td>334.40</td>\n",
-       "      <td>normal</td>\n",
-       "      <td>United Kingdom</td>\n",
+       "      <th>Germany</th>\n",
+       "      <td>0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>Netherlands</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4334</th>\n",
-       "      <td>4334</td>\n",
-       "      <td>18280</td>\n",
-       "      <td>180.60</td>\n",
-       "      <td>normal</td>\n",
-       "      <td>United Kingdom</td>\n",
+       "      <th>Norway</th>\n",
+       "      <td>9</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>17.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4335</th>\n",
-       "      <td>4335</td>\n",
-       "      <td>18281</td>\n",
-       "      <td>80.82</td>\n",
-       "      <td>normal</td>\n",
-       "      <td>United Kingdom</td>\n",
+       "      <th>Spain</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4336</th>\n",
-       "      <td>4336</td>\n",
-       "      <td>18282</td>\n",
-       "      <td>178.05</td>\n",
-       "      <td>normal</td>\n",
-       "      <td>United Kingdom</td>\n",
+       "      <th>Switzerland</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4337</th>\n",
-       "      <td>4337</td>\n",
-       "      <td>18283</td>\n",
-       "      <td>2094.88</td>\n",
-       "      <td>preferred</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4338</th>\n",
-       "      <td>4338</td>\n",
-       "      <td>18287</td>\n",
-       "      <td>1837.28</td>\n",
-       "      <td>preferred</td>\n",
-       "      <td>United Kingdom</td>\n",
+       "      <th>United Kingdom</th>\n",
+       "      <td>204</td>\n",
+       "      <td>831.0</td>\n",
+       "      <td>3116.0</td>\n",
+       "      <td>1035.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4339 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      index  CustomerID  amount_spent tipo_cliente         Country\n",
-       "0         0       12346      77183.60          vip  United Kingdom\n",
-       "1         1       12347       4310.00    preferred  United Kingdom\n",
-       "2         2       12348       1797.24    preferred  United Kingdom\n",
-       "3         3       12349       1757.55    preferred  United Kingdom\n",
-       "4         4       12350        334.40       normal  United Kingdom\n",
-       "...     ...         ...           ...          ...             ...\n",
-       "4334   4334       18280        180.60       normal  United Kingdom\n",
-       "4335   4335       18281         80.82       normal  United Kingdom\n",
-       "4336   4336       18282        178.05       normal  United Kingdom\n",
-       "4337   4337       18283       2094.88    preferred  United Kingdom\n",
-       "4338   4338       18287       1837.28    preferred  United Kingdom\n",
-       "\n",
-       "[4339 rows x 5 columns]"
+       "                vip  preferred  normal  vip + pref\n",
+       "Country                                           \n",
+       "Australia         1        4.0     9.0         5.0\n",
+       "EIRE              2        8.0    15.0        10.0\n",
+       "France            0        8.0    19.0         8.0\n",
+       "Germany           0        7.0    29.0         7.0\n",
+       "Netherlands       0        0.0     2.0         0.0\n",
+       "Norway            9        8.0    56.0        17.0\n",
+       "Spain             1        1.0     3.0         2.0\n",
+       "Switzerland       0        1.0     5.0         1.0\n",
+       "United Kingdom  204      831.0  3116.0      1035.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,8 +611,20 @@
    "source": [
     "customers_orders['Country'] = orders['Country']\n",
     "\n",
-    "customers_orders.reset_index(inplace=True)\n",
-    "customers_orders\n"
+    "\n",
+    "\n",
+    "customers_orders\n",
+    "\n",
+    "\n",
+    "estatus = pd.get_dummies(customers_orders['tipo_cliente'])\n",
+    "\n",
+    "estatus['Country'] = customers_orders['Country']\n",
+    "final = estatus.groupby('Country').agg({'vip':'sum', 'preferred':'sum', 'normal':'sum'})\n",
+    "final.sort_values(by='vip', ascending=False)\n",
+    "\n",
+    "final['vip + pref'] = final['vip'] + final['preferred']\n",
+    "\n",
+    "final\n"
    ]
   },
   {
@@ -652,7 +640,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n"
    ]
   },
   {
@@ -661,7 +649,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vip_pais = customers_orders.groupby('tipo_cliente').Country.value_counts()"
+    "vip_pais = customers_orders.groupby('tipo_cliente').Country.value_counts()\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -704,7 +694,9 @@
     }
    ],
    "source": [
-    "vip_pais"
+    "vip_pais\n",
+    "\n",
+    "\n"
    ]
   },
   {
